Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -13,7 +13,7 @@
   "sn22.60:2.6": "Was sagt der Buddha dazu?“ ",
   "sn22.60:3.1": "„Mahāli, es gibt einen Grund und eine Ursache für die Verunreinigung der Lebewesen. ",
   "sn22.60:3.2": "Lebewesen werden aus einem Grund und einer Ursache verunreinigt. ",
-  "sn22.60:3.3": "Es gibt eine Ursache und Bedingung für die Läuterung der Lebewesen. ",
+  "sn22.60:3.3": "Es gibt einen Grund und eine Ursache für die Läuterung der Lebewesen. ",
   "sn22.60:3.4": "Lebewesen werden aufgrund einer Ursache und Bedingung geläutert.“ ",
   "sn22.60:4.1": "„Aber Herr, was ist die Ursache und Bedingung für die Verunreinigung der Lebewesen? ",
   "sn22.60:4.2": "Wie werden Lebewesen aufgrund einer Ursache und Bedingung verunreinigt?“ ",
