--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -30,7 +30,7 @@
   "sn22.60:8.3": "Da sie es lieben, sind sie daran gebunden und werden so verunreinigt. ",
   "sn22.60:8.4": "Das ist ein Grund und eine Ursache für die Verunreinigung der Lebewesen. ",
   "sn22.60:8.5": "So werden Lebewesen aus einem Grund und einer Ursache verunreinigt.“ ",
-  "sn22.60:9.1": "„Aber Herr, was ist die Ursache und Bedingung für die Läuterung der Lebewesen? ",
+  "sn22.60:9.1": "„Aber Herr, was ist der Grund und die Ursache für die Läuterung der Lebewesen? ",
   "sn22.60:9.2": "Wie werden Lebewesen aufgrund einer Ursache und Bedingung geläutert?“ ",
   "sn22.60:9.3": "„Mahāli, wenn Form ausschließlich angenehm wäre – von Glück durchdrungen und vollgesogen und nicht von Schmerz vollgesogen –, würden die Lebewesen nicht davon ernüchtert werden. ",
   "sn22.60:9.4": "Aber da Form schmerzhaft ist – von Schmerz durchdrungen und vollgesogen und nicht von Glück vollgesogen –, werden die Lebewesen davon ernüchtert. ",
