Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -31,7 +31,7 @@
   "sn22.60:8.4": "Das ist ein Grund und eine Ursache für die Verunreinigung der Lebewesen. ",
   "sn22.60:8.5": "So werden Lebewesen aus einem Grund und einer Ursache verunreinigt.“ ",
   "sn22.60:9.1": "„Aber Herr, was ist der Grund und die Ursache für die Läuterung der Lebewesen? ",
-  "sn22.60:9.2": "Wie werden Lebewesen aufgrund einer Ursache und Bedingung geläutert?“ ",
+  "sn22.60:9.2": "Wie werden Lebewesen aus einem Grund und einer Ursache geläutert?“ ",
   "sn22.60:9.3": "„Mahāli, wenn Form ausschließlich angenehm wäre – von Glück durchdrungen und vollgesogen und nicht von Schmerz vollgesogen –, würden die Lebewesen nicht davon ernüchtert werden. ",
   "sn22.60:9.4": "Aber da Form schmerzhaft ist – von Schmerz durchdrungen und vollgesogen und nicht von Glück vollgesogen –, werden die Lebewesen davon ernüchtert. ",
   "sn22.60:9.5": "Wenn sie ernüchtert sind, schwindet die Leidenschaft. Wenn die Leidenschaft schwindet, sind sie geläutert. ",
