--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.60_translation-de-sabbamitta.json
@@ -36,7 +36,7 @@
   "sn22.60:9.4": "Aber da Form schmerzhaft ist – von Schmerz durchdrungen und vollgesogen und nicht von Glück vollgesogen –, werden die Lebewesen davon ernüchtert. ",
   "sn22.60:9.5": "Wenn sie ernüchtert sind, schwindet die Leidenschaft. Wenn die Leidenschaft schwindet, sind sie geläutert. ",
   "sn22.60:9.6": "Das ist ein Grund und eine Ursache für die Läuterung der Lebewesen. ",
-  "sn22.60:9.7": "So werden Lebewesen aufgrund einer Ursache und Bedingung geläutert. ",
+  "sn22.60:9.7": "So werden Lebewesen aus einem Grund und einer Ursache geläutert. ",
   "sn22.60:10.1": "Wenn Gefühl ausschließlich angenehm wäre … ",
   "sn22.60:10.2": "Wenn Wahrnehmung ausschließlich angenehm wäre … ",
   "sn22.60:10.3": "Wenn Entscheidungen ausschließlich angenehm wären … ",
