--- a/translation/de/sabbamitta/sutta/sn/sn24/sn24.7_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn24/sn24.7_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "sn24.7:0.3": "Ursache ",
   "sn24.7:1.1": "In Sāvatthī. ",
   "sn24.7:1.2": "„Mönche und Nonnen, wenn was besteht, weil man was ergreift und worauf besteht, entsteht die Ansicht: ",
-  "sn24.7:1.3": "‚Es gibt keine Ursache oder Bedingung für die Verunreinigung der Lebewesen. ",
+  "sn24.7:1.3": "‚Es gibt keinen Grund und keine Ursache für die Verunreinigung der Lebewesen. ",
   "sn24.7:1.4": "Lebewesen werden ohne Ursache oder Bedingung verunreinigt. ",
   "sn24.7:1.5": "Es gibt keine Ursache oder Bedingung für die Läuterung der Lebewesen. ",
   "sn24.7:1.6": "Lebewesen werden ohne Ursache oder Bedingung geläutert. ",
