--- a/translation/de/sabbamitta/sutta/sn/sn24/sn24.7_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn24/sn24.7_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "sn24.7:1.3": "‚Es gibt keinen Grund und keine Ursache für die Verunreinigung der Lebewesen. ",
   "sn24.7:1.4": "Lebewesen werden ohne Grund oder Ursache verunreinigt. ",
   "sn24.7:1.5": "Es gibt keinen Grund und keine Ursache für die Läuterung der Lebewesen. ",
-  "sn24.7:1.6": "Lebewesen werden ohne Ursache oder Bedingung geläutert. ",
+  "sn24.7:1.6": "Lebewesen werden ohne Grund oder Ursache geläutert. ",
   "sn24.7:1.7": "Es gibt keine Kraft, keine Energie, keine menschliche Stärke, keine Tatkraft.",
   "sn24.7:1.8": "Alle Lebewesen, alle lebenden Geschöpfe, alle Wesen, alle Seelen sind ohne Kontrolle, Kraft oder Energie. Vom Schicksal, den Umständen und der Natur getrieben, erfahren sie in den sechs Wiedergeburtsklassen Glück und Schmerz‘?“ ",
   "sn24.7:1.9": "„Unsere Lehren wurzeln im Buddha …“ ",
