Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn24/sn24.7_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn24/sn24.7_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn24/sn24.7_translation-de-sabbamitta.json
@@ -18,7 +18,7 @@
   "sn24.7:2.5": "Wenn Wahrnehmung besteht … ",
   "sn24.7:2.6": "Wenn Entscheidungen bestehen … ",
   "sn24.7:2.7": "Wenn Bewusstsein besteht, weil man Bewusstsein ergreift und auf Bewusstsein besteht, entsteht die Ansicht: ",
-  "sn24.7:2.8": "‚Es gibt keine Ursache oder Bedingung … ",
+  "sn24.7:2.8": "‚Es gibt keinen Grund und keine Ursache … ",
   "sn24.7:2.9": "Vom Schicksal, den Umständen und der Natur getrieben, erfahren sie in den sechs Wiedergeburtsklassen Glück und Schmerz.‘ ",
   "sn24.7:3.1": "Was denkt ihr, Mönche und Nonnen? ",
   "sn24.7:3.2": "Ist Form beständig oder unbeständig?“ ",
