--- a/translation/de/sabbamitta/sutta/sn/sn24/sn24.7_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn24/sn24.7_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn24.7:0.1": "Verbundene Lehrreden 24.7 ",
   "sn24.7:0.2": "1. Das Kapitel über den Stromeintritt ",
-  "sn24.7:0.3": "Ursache ",
+  "sn24.7:0.3": "Grund ",
   "sn24.7:1.1": "In Sāvatthī. ",
   "sn24.7:1.2": "„Mönche und Nonnen, wenn was besteht, weil man was ergreift und worauf besteht, entsteht die Ansicht: ",
   "sn24.7:1.3": "‚Es gibt keinen Grund und keine Ursache für die Verunreinigung der Lebewesen. ",
