Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -816,7 +816,7 @@
   "sn-name:815.sn24.4": "Es könnte nicht mein sein ",
   "sn-name:816.sn24.5": "Es gibt kein Geben an Verstorbene ",
   "sn-name:817.sn24.6": "Handeln ",
-  "sn-name:818.sn24.7": "Ursache ",
+  "sn-name:818.sn24.7": "Grund ",
   "sn-name:819.sn24.8": "Die ausgedehnte Ansicht ",
   "sn-name:820.sn24.9": "Das Weltall ist ewig ",
   "sn-name:821.sn24.10": "Das Weltall ist nicht ewig ",
