--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.93_translation-de-sabbamitta.json
@@ -23,7 +23,7 @@
   "sn35.93:3.3": "Gedanken sind unbeständig, verfallen und gehen zugrunde. ",
   "sn35.93:3.4": "Somit schwankt und kippt diese Zweiheit: Sie ist unbeständig, verfällt und geht zugrunde. ",
   "sn35.93:3.5": "Geistbewusstsein ist unbeständig, verfällt und geht zugrunde. ",
-  "sn35.93:3.6": "Die Ursachen und Bedingungen, die Geistbewusstsein entstehen lassen, auch diese sind unbeständig, verfallen und gehen zugrunde. ",
+  "sn35.93:3.6": "Die Gründe und Ursachen, die Geistbewusstsein entstehen lassen, auch diese sind unbeständig, verfallen und gehen zugrunde. ",
   "sn35.93:3.7": "Da Geistbewusstsein in Abhängigkeit von Bedingungen entstanden ist, die unbeständig sind, wie könnte es da beständig sein? ",
   "sn35.93:3.8": "Das Zusammenkommen, Zusammentreffen und Sichverbinden dieser drei Dinge nennt man Geistberührung. ",
   "sn35.93:3.9": "Auch Geistberührung ist unbeständig, verfällt und geht zugrunde. ",
