--- a/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.198_translation-de-sabbamitta.json
@@ -75,7 +75,7 @@
   "an4.198:9.18": "sowie Bestechung, Betrug, Täuschung und Falschheit. ",
   "an4.198:9.19": "Er unterlässt Verstümmelung, Mord, Entführung, Räuberei, Plünderung und Gewalt. ",
   "an4.198:10.1": "Er ist zufrieden mit Roben, die den Körper einhüllen, und Almosen, das den Bauch füllt. Wohin er geht, da hat er nur diese Dinge dabei. ",
-  "an4.198:10.2": "Wie ein Vogel: Wohin er fliegt, da hat er nur seine Flügel dabei. ",
+  "an4.198:10.2": "Wie ein Vogel: Wohin er auch fliegt, sind die Flügel seine einzige Last. ",
   "an4.198:10.3": "Ebenso ist ein Mönch zufrieden mit Roben, die den Körper einhüllen, und Almosen, das den Bauch füllt. Wohin er geht, da hat er nur diese Dinge dabei. ",
   "an4.198:10.4": "Wenn er diesen ganzen Umfang der edlen Sittlichkeit besitzt, erfährt er im Innern ein Glück, das ohne Tadel ist. ",
   "an4.198:11.1": "Wenn er mit dem Auge ein Bild sieht, bleibt er nicht an den Merkmalen und Einzelheiten hängen. ",
