--- a/translation/de/sabbamitta/sutta/an/an3/an3.61_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.61_translation-de-sabbamitta.json
@@ -9,7 +9,7 @@
   "an3.61:1.5": "Es gibt Asketen und Brahmanen, die diese Doktrin, diese Ansicht haben: ",
   "an3.61:1.6": "‚Alles, was diese Person erfährt – angenehm, schmerzhaft oder neutral –, all das liegt an der Schöpfung Gottes.‘ ",
   "an3.61:1.7": "Es gibt Asketen und Brahmanen, die diese Doktrin, diese Ansicht haben: ",
-  "an3.61:1.8": "‚Alles, was diese Person erfährt – angenehm, schmerzhaft oder neutral –, all das hat keine Ursache oder Bedingung.‘ ",
+  "an3.61:1.8": "‚Alles, was diese Person erfährt – angenehm, schmerzhaft oder neutral –, all das hat keinen Grund und keine Ursache.‘ ",
   "an3.61:2.1": "In dieser Sache bin ich zu den Asketen und Brahmanen gegangen, die glauben, ",
   "an3.61:2.2": "dass alles, was wir erfahren, an unseren früheren Taten liegt, und sagte zu ihnen: ",
   "an3.61:2.3": "‚Ist es wirklich wahr, ist das die Lehre und Ansicht der Ehrwürdigen?‘ ",
