--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.19_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "sn22.19:0.3": "Leiden mit seiner Ursache ",
   "sn22.19:1.1": "In Sāvatthī. ",
   "sn22.19:1.2": "„Mönche und Nonnen, Form ist Leiden. ",
-  "sn22.19:1.3": "Die Ursache und Bedingung, die Form entstehen lässt, auch diese ist Leiden. ",
+  "sn22.19:1.3": "Der Grund und die Ursache, die Form entstehen lassen, auch diese sind Leiden. ",
   "sn22.19:1.4": "Da Form von etwas erzeugt wird, das Leiden ist, wie könnte sie da Glück sein? ",
   "sn22.19:1.5": "Gefühl ist Leiden … ",
   "sn22.19:1.6": "Wahrnehmung ist Leiden … ",
