--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.19_translation-de-sabbamitta.json
@@ -10,7 +10,7 @@
   "sn22.19:1.6": "Wahrnehmung ist Leiden … ",
   "sn22.19:1.7": "Entscheidungen sind Leiden … ",
   "sn22.19:1.8": "Bewusstsein ist Leiden. ",
-  "sn22.19:1.9": "Die Ursache und Bedingung, die Bewusstsein entstehen lässt, auch diese ist Leiden. ",
+  "sn22.19:1.9": "Der Grund und die Ursache, die Bewusstsein entstehen lassen, auch diese sind Leiden. ",
   "sn22.19:1.10": "Da Bewusstsein von etwas erzeugt wird, das Leiden ist, wie könnte es da Glück sein? ",
   "sn22.19:1.11": "Wenn er das sieht … ",
   "sn22.19:1.12": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘“ "
