--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.19_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn22.19:0.1": "Verbundene Lehrreden 22.19 ",
   "sn22.19:0.2": "2. Das Kapitel über Unbeständigkeit ",
-  "sn22.19:0.3": "Leiden mit seiner Ursache ",
+  "sn22.19:0.3": "Leiden mit seinem Grund ",
   "sn22.19:1.1": "In Sāvatthī. ",
   "sn22.19:1.2": "„Mönche und Nonnen, Form ist Leiden. ",
   "sn22.19:1.3": "Der Grund und die Ursache, die Form entstehen lassen, auch diese sind Leiden. ",
