--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -621,7 +621,7 @@
   "sn-name:620.sn22.16": "Was Leiden ist ",
   "sn-name:621.sn22.17": "Was ohne Selbst ist ",
   "sn-name:622.sn22.18": "Unbeständigkeit mit ihrer Ursache ",
-  "sn-name:623.sn22.19": "Leiden mit seiner Ursache ",
+  "sn-name:623.sn22.19": "Leiden mit seinem Grund ",
   "sn-name:624.sn22.20": "Was ohne Selbst ist mit seiner Ursache ",
   "sn-name:625.sn22.21": "Mit Ānanda ",
   "sn-name:626.sn22-bharavagga": "Das Kapitel über die Last ",
