--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -620,7 +620,7 @@
   "sn-name:619.sn22.15": "Was unbeständig ist ",
   "sn-name:620.sn22.16": "Was Leiden ist ",
   "sn-name:621.sn22.17": "Was ohne Selbst ist ",
-  "sn-name:622.sn22.18": "Unbeständigkeit mit ihrer Ursache ",
+  "sn-name:622.sn22.18": "Unbeständigkeit mit ihrem Grund ",
   "sn-name:623.sn22.19": "Leiden mit seinem Grund ",
   "sn-name:624.sn22.20": "Was ohne Selbst ist mit seiner Ursache ",
   "sn-name:625.sn22.21": "Mit Ānanda ",
