Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -622,7 +622,7 @@
   "sn-name:621.sn22.17": "Was ohne Selbst ist ",
   "sn-name:622.sn22.18": "Unbeständigkeit mit ihrem Grund ",
   "sn-name:623.sn22.19": "Leiden mit seinem Grund ",
-  "sn-name:624.sn22.20": "Was ohne Selbst ist mit seiner Ursache ",
+  "sn-name:624.sn22.20": "Was ohne Selbst ist mit seinem Grund ",
   "sn-name:625.sn22.21": "Mit Ānanda ",
   "sn-name:626.sn22-bharavagga": "Das Kapitel über die Last ",
   "sn-name:627.sn22.22": "Die Last ",
