--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.18_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.18_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn22.18:0.1": "Verbundene Lehrreden 22.18 ",
   "sn22.18:0.2": "2. Das Kapitel über Unbeständigkeit ",
-  "sn22.18:0.3": "Unbeständigkeit mit ihrer Ursache ",
+  "sn22.18:0.3": "Unbeständigkeit mit ihrem Grund ",
   "sn22.18:1.1": "In Sāvatthī. ",
   "sn22.18:1.2": "„Mönche und Nonnen, Form ist unbeständig. ",
   "sn22.18:1.3": "Die Ursache und Bedingung, die Form entstehen lässt, auch diese ist unbeständig. ",
