--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.18_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.18_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "sn22.18:0.3": "Unbeständigkeit mit ihrem Grund ",
   "sn22.18:1.1": "In Sāvatthī. ",
   "sn22.18:1.2": "„Mönche und Nonnen, Form ist unbeständig. ",
-  "sn22.18:1.3": "Die Ursache und Bedingung, die Form entstehen lässt, auch diese ist unbeständig. ",
+  "sn22.18:1.3": "Der Grund und die Ursache, die Form entstehen lassen, auch diese sind unbeständig. ",
   "sn22.18:1.4": "Da Form von etwas erzeugt wird, das unbeständig ist, wie könnte sie da beständig sein? ",
   "sn22.18:1.5": "Gefühl ist unbeständig … ",
   "sn22.18:1.8": "Wahrnehmung ist unbeständig … ",
