--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.18_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.18_translation-de-sabbamitta.json
@@ -10,7 +10,7 @@
   "sn22.18:1.8": "Wahrnehmung ist unbeständig … ",
   "sn22.18:1.9": "Entscheidungen sind unbeständig … ",
   "sn22.18:1.12": "Bewusstsein ist unbeständig. ",
-  "sn22.18:1.13": "Die Ursache und Bedingung, die Bewusstsein entstehen lässt, auch diese ist unbeständig. ",
+  "sn22.18:1.13": "Der Grund und die Ursache, die Bewusstsein entstehen lassen, auch diese sind unbeständig. ",
   "sn22.18:1.14": "Da Bewusstsein von etwas erzeugt wird, das unbeständig ist, wie könnte es da beständig sein? ",
   "sn22.18:1.15": "Wenn er das sieht … ",
   "sn22.18:1.16": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘“ "
