--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.20_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "sn22.20:0.3": "Was ohne Selbst ist mit seiner Ursache ",
   "sn22.20:1.1": "In Sāvatthī. ",
   "sn22.20:1.2": "„Mönche und Nonnen, Form ist ohne Selbst. ",
-  "sn22.20:1.3": "Die Ursache und Bedingung, die Form entstehen lässt, auch diese ist ohne Selbst. ",
+  "sn22.20:1.3": "Der Grund und die Ursache, die Form entstehen lassen, auch diese sind ohne Selbst. ",
   "sn22.20:1.4": "Da Form von etwas erzeugt wird, das ohne Selbst ist, wie könnte sie da ein Selbst sein? ",
   "sn22.20:1.5": "Gefühl ist ohne Selbst … ",
   "sn22.20:1.6": "Wahrnehmung ist ohne Selbst … ",
