--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.20_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn22.20:0.1": "Verbundene Lehrreden 22.20 ",
   "sn22.20:0.2": "2. Das Kapitel über Unbeständigkeit ",
-  "sn22.20:0.3": "Was ohne Selbst ist mit seiner Ursache ",
+  "sn22.20:0.3": "Was ohne Selbst ist mit seinem Grund ",
   "sn22.20:1.1": "In Sāvatthī. ",
   "sn22.20:1.2": "„Mönche und Nonnen, Form ist ohne Selbst. ",
   "sn22.20:1.3": "Der Grund und die Ursache, die Form entstehen lassen, auch diese sind ohne Selbst. ",
