--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.20_translation-de-sabbamitta.json
@@ -10,7 +10,7 @@
   "sn22.20:1.6": "Wahrnehmung ist ohne Selbst … ",
   "sn22.20:1.7": "Entscheidungen sind ohne Selbst … ",
   "sn22.20:1.8": "Bewusstsein ist ohne Selbst. ",
-  "sn22.20:1.9": "Die Ursache und Bedingung, die Bewusstsein entstehen lässt, auch diese ist ohne Selbst. ",
+  "sn22.20:1.9": "Der Grund und die Ursache, die Bewusstsein entstehen lassen, auch diese sind ohne Selbst. ",
   "sn22.20:1.10": "Da Bewusstsein von etwas erzeugt wird, das ohne Selbst ist, wie könnte es da ein Selbst sein? ",
   "sn22.20:1.11": "Wenn er das sieht … ",
   "sn22.20:1.12": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘“ "
