--- a/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
@@ -467,7 +467,7 @@
   "dn16:2.25.11": "Gerade wie ein heruntergekommener Karren nur mithilfe von Riemen zusammenhält, ",
   "dn16:2.25.12": "ebenso hält der Körper des Klargewordenen, so kann man denken, nur mithilfe von Riemen zusammen. ",
   "dn16:2.25.13": "Manchmal wendet der Klargewordene seine Aufmerksamkeit von allen Merkmalen ab, und mit dem Aufhören bestimmter Gefühle tritt er in die merkmalslose Versenkung des Herzens ein und verweilt darin. Nur dann hat der Körper des Klargewordenen weniger Beschwerden. ",
-  "dn16:2.26.1": "Daher, Ānanda, sei deine eigene Insel, deine eigene Zuflucht, suche keine andere Zuflucht. Mach die Lehre zu deiner Insel und deiner Zuflucht, suche keine andere Zuflucht. ",
+  "dn16:2.26.1": "Daher, Ānanda, lebe als deine eigene Insel, deine eigene Zuflucht, suche keine andere Zuflucht. Mach die Lehre zu deiner Insel und deiner Zuflucht, suche keine andere Zuflucht. ",
   "dn16:2.26.2": "Und wie ist ein Mönch seine eigene Insel, seine eigene Zuflucht, und sucht keine andere Zuflucht? Wie macht er die Lehre zu seiner Insel und seiner Zuflucht und sucht keine andere Zuflucht? ",
   "dn16:2.26.3": "Da meditiert ein Mönch, indem er einen Aspekt des Körpers beobachtet – eifrig, umsichtig und achtsam, frei von Verlangen nach der Welt oder Abneigung dagegen. ",
   "dn16:2.26.4": "Er meditiert, indem er einen Aspekt der Gefühle beobachtet … ",
