Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -648,7 +648,7 @@
   "sn-name:647.sn22.41": "Im Einklang mit den Lehren (3) ",
   "sn-name:648.sn22.42": "Im Einklang mit den Lehren (4) ",
   "sn-name:649.sn22-attadipavagga": "Das Kapitel darüber, als deine eigene Insel zu leben ",
-  "sn-name:650.sn22.43": "Sei deine eigene Insel ",
+  "sn-name:650.sn22.43": "Lebe als deine eigene Insel ",
   "sn-name:651.sn22.44": "Übung ",
   "sn-name:652.sn22.45": "Unbeständigkeit ",
   "sn-name:653.sn22.46": "Unbeständigkeit (2) ",
