Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn26_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn26_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn26_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "dn26:1.4": "„Mönche und Nonnen!“ ",
   "dn26:1.5": "„Ehrwürdiger Herr“, antworteten sie. ",
   "dn26:1.6": "Der Buddha sagte: ",
-  "dn26:1.7": "„Mönche und Nonnen, seid eure eigene Insel, eure eigene Zuflucht, sucht keine andere Zuflucht. Macht die Lehre zu eurer Insel und eurer Zuflucht, sucht keine andere Zuflucht. ",
+  "dn26:1.7": "„Mönche und Nonnen, lebt als eure eigene Insel, eure eigene Zuflucht, sucht keine andere Zuflucht. Macht die Lehre zu eurer Insel und eurer Zuflucht, sucht keine andere Zuflucht. ",
   "dn26:1.8": "Und wie ist ein Mönch seine eigene Insel, seine eigene Zuflucht, und sucht keine andere Zuflucht? Wie macht er die Lehre zu seiner Insel und seiner Zuflucht und sucht keine andere Zuflucht? ",
   "dn26:1.9": "Da meditiert er, indem er einen Aspekt des Körpers beobachtet – eifrig, umsichtig und achtsam, frei von Verlangen nach der Welt oder Abneigung dagegen. ",
   "dn26:1.10": "Er meditiert, indem er einen Aspekt der Gefühle beobachtet … ",
