Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn26_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn26_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn26_translation-de-sabbamitta.json
@@ -14,7 +14,7 @@
   "dn26:1.10": "Er meditiert, indem er einen Aspekt der Gefühle beobachtet … ",
   "dn26:1.11": "indem er einen Aspekt des Geistes beobachtet … ",
   "dn26:1.12": "indem er einen Aspekt der natürlichen Gesetzmäßigkeiten beobachtet – eifrig, umsichtig und achtsam, frei von Verlangen nach der Welt oder Abneigung dagegen. ",
-  "dn26:1.13": "So ist ein Mönch seine eigene Insel, seine eigene Zuflucht und sucht keine andere Zuflucht. So macht er die Lehre zu seiner Insel und seiner Zuflucht und sucht keine andere Zuflucht. ",
+  "dn26:1.13": "So lebt ein Mönch als seine eigene Insel, seine eigene Zuflucht und sucht keine andere Zuflucht. So macht er die Lehre zu seiner Insel und seiner Zuflucht und sucht keine andere Zuflucht. ",
   "dn26:1.14": "Ihr sollt euer eigenes Revier durchstreifen, das Hoheitsgebiet eurer Väter. ",
   "dn26:1.15": "Wenn ihr euer eigenes Revier durchstreift, das Hoheitsgebiet eurer Väter, wird Māra keinen Angriffspunkt finden und euch nicht zu fassen bekommen. ",
   "dn26:1.16": "Indem man sich taugliche Eigenschaften vornimmt, wächst Verdienst an. ",
