--- a/translation/de/sabbamitta/sutta/dn/dn26_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn26_translation-de-sabbamitta.json
@@ -292,7 +292,7 @@
   "dn26:26.2": "Nachdem er dort geblieben ist, wird er ihn den Asketen und Brahmanen, den Bedürftigen, Landstreichern, Reisenden und Bettlern geben. Dann wird er sich Haar und Bart rasieren, ockerfarbene Roben anlegen und vor dem Buddha Metteyya aus dem Haus fortziehen ins hauslose Leben. ",
   "dn26:26.3": "Bald nachdem er fortgezogen ist, wird er, während er allein lebt, zurückgezogen, beflissen, eifrig und entschlossen, in diesem Leben zum äußersten Höhepunkt des spirituellen Pfades gelangen. Er wird an dem Ziel leben, das er durch eigene Einsicht erkennt, für welches ehrbare Menschen zu Recht aus dem Haus fortziehen ins hauslose Leben. ",
   "dn26:27.1": "Mönche und Nonnen, lebt als eure eigene Insel, eure eigene Zuflucht, sucht keine andere Zuflucht. Macht die Lehre zu eurer Insel und eurer Zuflucht, sucht keine andere Zuflucht. ",
-  "dn26:27.2": "Und wie ist eine Nonne ihre eigene Insel, ihre eigene Zuflucht, und sucht keine andere Zuflucht? Wie macht sie die Lehre zu ihrer Insel und ihrer Zuflucht und sucht keine andere Zuflucht? ",
+  "dn26:27.2": "Und wie lebt eine Nonne als ihre eigene Insel, ihre eigene Zuflucht, und sucht keine andere Zuflucht? Wie macht sie die Lehre zu ihrer Insel und ihrer Zuflucht und sucht keine andere Zuflucht? ",
   "dn26:27.3": "Da meditiert eine Nonne, indem sie einen Aspekt des Körpers beobachtet – eifrig, umsichtig und achtsam, frei von Verlangen nach der Welt oder Abneigung dagegen. ",
   "dn26:27.4": "Sie meditiert, indem sie einen Aspekt der Gefühle beobachtet … ",
   "dn26:27.5": "indem sie einen Aspekt des Geistes beobachtet … ",
