Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn26_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn26_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn26_translation-de-sabbamitta.json
@@ -297,7 +297,7 @@
   "dn26:27.4": "Sie meditiert, indem sie einen Aspekt der Gefühle beobachtet … ",
   "dn26:27.5": "indem sie einen Aspekt des Geistes beobachtet … ",
   "dn26:27.6": "indem sie einen Aspekt der natürlichen Gesetzmäßigkeiten beobachtet – eifrig, umsichtig und achtsam, frei von Verlangen nach der Welt oder Abneigung dagegen. ",
-  "dn26:27.7": "So ist eine Nonne ihre eigene Insel, ihre eigene Zuflucht und sucht keine andere Zuflucht. So macht sie die Lehre zu ihrer Insel und ihrer Zuflucht und sucht keine andere Zuflucht. ",
+  "dn26:27.7": "So lebt eine Nonne als ihre eigene Insel, ihre eigene Zuflucht und sucht keine andere Zuflucht. So macht sie die Lehre zu ihrer Insel und ihrer Zuflucht und sucht keine andere Zuflucht. ",
   "dn26:28.0": "9. Über langes Leben und Schönheit für Mönche und Nonnen ",
   "dn26:28.1": "Mönche und Nonnen, ihr sollt euer eigenes Revier durchstreifen, das Hoheitsgebiet eurer Väter. ",
   "dn26:28.2": "Wenn ihr das tut, werden eure Lebensdauer, eure Schönheit, euer Glück, euer Reichtum und eure Stärke zunehmen. ",
