--- a/translation/de/sabbamitta/sutta/dn/dn19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn19_translation-de-sabbamitta.json
@@ -391,7 +391,7 @@
   "dn19:51.2": "Wenn sieben Jahre vergangen sind, werden wir fortziehen. Dein Schicksal soll auch unseres sein.“ ",
   "dn19:51.3": "„Sieben Jahre sind zu lang, ihr Herren. So lange kann ich nicht warten. ",
   "dn19:51.4": "Wer weiß, was den Lebenden alles zustößt? ",
-  "dn19:51.5": "Wir sind auf dem Weg ins nächste Leben. Daran müssen wir denken und aufwachen! Wir müssen das Gute tun und das geistliche Leben führen, denn niemand, der geboren ist, kann dem Tod entrinnen. ",
+  "dn19:51.5": "Wir sind auf dem Weg ins nächste Leben. Wir müssen bedacht sein und aufwachen! Wir müssen das Gute tun und das geistliche Leben führen, denn niemand, der geboren ist, kann dem Tod entrinnen. ",
   "dn19:51.7": "Ich werde fortziehen.“ ",
   "dn19:52.1": "„Nun, Herr, dann warte bitte sechs Jahre … ",
   "dn19:52.2": "fünf Jahre … ",
