--- a/translation/de/sabbamitta/sutta/an/an7/an7.74_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.74_translation-de-sabbamitta.json
@@ -24,7 +24,7 @@
   "an7.74:9.2": "Und die Menschen hatten damals nur sechs Beschwerden: ",
   "an7.74:9.3": "Kälte, Hitze, Hunger, Durst, Stuhl- und Harndrang. ",
   "an7.74:9.4": "Und obwohl die Menschen so lange lebten und fortbestanden und so wenig Beschwerden hatten, lehrte Araka dennoch: ",
-  "an7.74:9.5": "‚Das menschliche Leben ist kurz, knapp und flüchtig, voller Leiden und Bedrängnis. Denkt darüber nach und wacht auf! Tut das Gute und führt das geistliche Leben, denn niemand, der geboren ist, kann dem Tod entrinnen.‘ ",
+  "an7.74:9.5": "‚Das menschliche Leben ist kurz, knapp und flüchtig, voller Leiden und Bedrängnis. Seid bedacht und wacht auf! Tut das Gute und führt das geistliche Leben, denn niemand, der geboren ist, kann dem Tod entrinnen.‘ ",
   "an7.74:10.1": "Heutzutage würde man zu Recht sagen: ",
   "an7.74:10.2": "‚Das menschliche Leben ist kurz, knapp und flüchtig, voller Leiden und Bedrängnis. Denkt darüber nach und wacht auf! Tut das Gute und führt das geistliche Leben, denn niemand, der geboren ist, kann dem Tod entrinnen.‘ ",
   "an7.74:10.3": "Denn heutzutage dauert ein langes Leben hundert Jahre oder ein wenig länger. ",
