--- a/translation/de/sabbamitta/sutta/dn/dn21_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn21_translation-de-sabbamitta.json
@@ -364,7 +364,7 @@
   "dn21:2.6.16": "„Das ist wirklich wahr, Gesegneter! Das ist wirklich wahr, Heiliger! ",
   "dn21:2.6.17": "Als ich die Antwort des Buddha gehört habe, bin ich über den Zweifel hinausgegangen und habe mich von Unschlüssigkeit frei gemacht.“ ",
   "dn21:2.6.18": "Und dann stellte Sakka eine weitere Frage: ",
-  "dn21:2.7.1": "„Aufgewühltsein, Herr, ist eine Krankheit, ein Eiterherd, ein Pfeil. Aufgewühltsein zieht einen Menschen zur Wiedergeburt von einem Leben zum anderen. ",
+  "dn21:2.7.1": "„Erregung, Herr, ist eine Krankheit, ein Eiterherd, ein Pfeil. Erregung zieht einen Menschen zur Wiedergeburt von einem Leben zum anderen. ",
   "dn21:2.7.2": "Darum findet sich ein Mensch in hohen und niederen Zuständen wieder. ",
   "dn21:2.7.3": "Anderswo, bei anderen Asketen und Brahmanen, wurde mir nicht einmal die Gelegenheit gegeben, diese Fragen zu stellen, die der Buddha beantwortet hat. ",
   "dn21:2.7.4": "Der Pfeil des Zweifels und der Unschlüssigkeit hat lange in mir verborgen gelegen, aber der Buddha hat ihn herausgezogen.“ ",
