Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -963,7 +963,7 @@
   "sn-name:1069.sn35.88": "Mit Puṇṇa ",
   "sn-name:1070.sn35.89": "Mit Bāhiya ",
   "sn-name:1071.sn35.90": "Erregung (1) ",
-  "sn-name:1072.sn35.91": "Aufgewühltsein (2) ",
+  "sn-name:1072.sn35.91": "Erregung (2) ",
   "sn-name:1073.sn35.92": "Zweiheit (1) ",
   "sn-name:1074.sn35.93": "Zweiheit (2) ",
   "sn-name:1075.sn35-salavagga": "Das Kapitel über die Sechser ",
