--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.90_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.90_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn35.90:0.1": "Verbundene Lehrreden 35.90 ",
   "sn35.90:0.2": "9. Das Kapitel mit Channa ",
-  "sn35.90:0.3": "Aufgewühltsein (1) ",
+  "sn35.90:0.3": "Erregung (1) ",
   "sn35.90:1.1": "„Erregung, Mönche und Nonnen, ist eine Krankheit, ein Eiterherd, ein Pfeil. ",
   "sn35.90:1.2": "Aus diesem Grund lebt der Klargewordene unerregt, den Pfeil herausgezogen. ",
   "sn35.90:1.3": "Wenn nun ein Mönch wünscht: ‚Dass ich doch unerregt leben könnte, den Pfeil herausgezogen‘, ",
