--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.91_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.91_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "sn35.91:0.1": "Verbundene Lehrreden 35.91 ",
   "sn35.91:0.2": "9. Das Kapitel mit Channa ",
-  "sn35.91:0.3": "Aufgewühltsein (2) ",
+  "sn35.91:0.3": "Erregung (2) ",
   "sn35.91:1.1": "„Aufgewühltsein, Mönche und Nonnen, ist eine Krankheit, ein Eiterherd, ein Pfeil. ",
   "sn35.91:1.2": "Aus diesem Grund lebt der Klargewordene unbewegt, den Pfeil herausgezogen. ",
   "sn35.91:1.3": "Wenn nun eine Nonne wünscht: ‚Dass ich doch unbewegt leben könnte, den Pfeil herausgezogen‘, ",
