--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.91_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.91_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "sn35.91:0.3": "Erregung (2) ",
   "sn35.91:1.1": "„Erregung, Mönche und Nonnen, ist eine Krankheit, ein Eiterherd, ein Pfeil. ",
   "sn35.91:1.2": "Aus diesem Grund lebt der Klargewordene unerregt, den Pfeil herausgezogen. ",
-  "sn35.91:1.3": "Wenn nun eine Nonne wünscht: ‚Dass ich doch unbewegt leben könnte, den Pfeil herausgezogen‘, ",
+  "sn35.91:1.3": "Wenn nun eine Nonne wünscht: ‚Dass ich doch unerregt leben könnte, den Pfeil herausgezogen‘, ",
   "sn35.91:1.4": "so sollte sie sich nicht mit dem Auge gleichsetzen, sich nicht in Bezug auf das Auge gleichsetzen, sich nicht als das Auge gleichsetzen, sich nicht gleichsetzen: ‚Das Auge ist mein‘. ",
   "sn35.91:1.5": "Sie sollte sich nicht mit Bildern gleichsetzen … ",
   "sn35.91:1.6": "Sie sollte sich nicht mit Augenbewusstsein gleichsetzen … ",
