Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn10_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn10_translation-de-sabbamitta.json
@@ -150,7 +150,7 @@
   "dn10:2.22.2": "Ein Mensch mit gutem Sehvermögen würde es in die Hand nehmen und untersuchen: ‚Dieses Schmuckstück aus Beryll ist von natürlicher Schönheit, mit acht Facetten, gut gearbeitet, durchsichtig, klar und ungetrübt, mit allen guten Eigenschaften versehen. Und es ist auf einen blauen, gelben, roten, weißen oder goldbraunen Faden aufgefädelt.‘ ",
   "dn10:2.22.3": "Ebenso streckt eine Nonne ihren Geist aus und richtet ihn, wenn er so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unerregt –, auf das Erkennen und Sehen. ",
   "dn10:2.22.10": "Das ist Teil ihrer Weisheit. ",
-  "dn10:2.23.1": "Wenn ihr Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unerschütterlich –, dann streckt sie ihn aus und richtet ihn auf das Hervorbringen eines geistgeschaffenen Körpers. ",
+  "dn10:2.23.1": "Wenn ihr Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unerregt –, dann streckt sie ihn aus und richtet ihn auf das Hervorbringen eines geistgeschaffenen Körpers. ",
   "dn10:2.23.2": "Aus diesem Körper bringt sie einen anderen Körper hervor, von materieller Natur, geistgeschaffen, in all den verschiedenen Teilen vollständig und ohne dass eine Fähigkeit fehlte. ",
   "dn10:2.24.1": "Wie wenn jemand einen Schilfhalm aus seiner Scheide zöge ",
   "dn10:2.24.2": "und dächte: ",
