--- a/translation/de/sabbamitta/sutta/dn/dn10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn10_translation-de-sabbamitta.json
@@ -168,7 +168,7 @@
   "dn10:2.26.1": "Wie ein fachkundiger Töpfer oder Töpferlehrling, der gut vorbereiteten Ton hätte: Er könnte daraus jedes Gefäß herstellen, das er wollte. ",
   "dn10:2.26.2": "Oder wie ein fachkundiger Elfenbeinschnitzer oder Elfenbeinschnitzer-Lehrling, der gut vorbereitetes Elfenbein hätte: Er könnte daraus jeden Elfenbein-Gegenstand herstellen, den er wollte. ",
   "dn10:2.26.3": "Oder wie ein fachkundiger Goldschmied oder Goldschmiedelehrling, der gut vorbereitetes Gold hätte: Er könnte daraus jeden goldenen Gegenstand herstellen, den er wollte. ",
-  "dn10:2.26.4": "Ebenso streckt eine Nonne ihren Geist aus und richtet ihn, wenn er so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unerschütterlich –, auf die Wunderkräfte. ",
+  "dn10:2.26.4": "Ebenso streckt eine Nonne ihren Geist aus und richtet ihn, wenn er so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unerregt –, auf die Wunderkräfte. ",
   "dn10:2.26.6": "Das ist Teil ihrer Weisheit. ",
   "dn10:2.27.1": "Wenn ihr Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unerschütterlich –, dann streckt sie ihn aus und richtet ihn auf die Hellhörigkeit. ",
   "dn10:2.27.2": "Mit geläuterter und übermenschlicher Hellhörigkeit kann sie beide Arten von Tönen hören, menschliche und göttliche, ob nah oder fern. ",
