Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn10_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn10_translation-de-sabbamitta.json
@@ -175,7 +175,7 @@
   "dn10:2.27.3": "Wie wenn ein Mensch eine Straße entlangwanderte, und er hörte den Klang von Tontrommeln, Schlaginstrumenten, Schneckenhörnern, Pauken und Tomtoms. Er dächte: ‚Das ist der Klang von Trommeln‘, ‚Das ist der Klang von Schlaginstrumenten‘ und ‚Das ist der Klang von Schneckenhörnern, Pauken und Tomtoms‘. ",
   "dn10:2.27.4": "Ebenso streckt eine Nonne ihren Geist aus und richtet ihn, wenn er so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unerregt –, auf die Hellhörigkeit. ",
   "dn10:2.27.7": "Das ist Teil ihrer Weisheit. ",
-  "dn10:2.28.1": "Wenn ihr Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unerschütterlich –, dann streckt sie ihn aus und richtet ihn darauf, den Geist anderer zu erfassen. ",
+  "dn10:2.28.1": "Wenn ihr Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unerregt –, dann streckt sie ihn aus und richtet ihn darauf, den Geist anderer zu erfassen. ",
   "dn10:2.28.2": "Sie erkennt ",
   "dn10:2.28.3": "einen gierigen Geist als ‚gierigen Geist‘ ",
   "dn10:2.28.4": "und einen von Gier freien Geist als ‚von Gier freien Geist‘. ",
