--- a/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.3_translation-de-sabbamitta.json
@@ -66,6 +66,6 @@
   "ud3.3:16.1": "Und da er diese Sache verstand, drückte der Buddha bei dieser Gelegenheit dieses innige Gefühl aus: ",
   "ud3.3:17.1": "„Ein Mönch, der die Dornen der Sinnlichkeit geschlagen, ",
   "ud3.3:17.2": "wie auch Beschimpfung, Töten und Gefangennehmen, ",
-  "ud3.3:17.3": "fest wie ein Berg, unerschütterlich, ",
+  "ud3.3:17.3": "fest wie ein Berg, unerregt, ",
   "ud3.3:17.4": "zittert nicht bei Glück oder Schmerz.“ "
 }
