Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an3/an3.59_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an3/an3.59_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.59_translation-de-sabbamitta.json
@@ -19,7 +19,7 @@
   "an3.59:4.2": "Man erinnert sich an viele Arten früherer Leben mit den Merkmalen und Einzelheiten. ",
   "an3.59:4.3": "Das ist das erste Wissen, das man erlangt. ",
   "an3.59:4.4": "Unwissenheit ist zerstört und Wissen ist aufgegangen; Dunkelheit ist zerstört und Licht ist aufgegangen, wie es bei jemandem geschieht, der beflissen, eifrig und entschlossen meditiert. ",
-  "an3.59:5.1": "Wenn der Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unerschütterlich –, dann streckt man ihn aus auf die Erkenntnis von Tod und Wiedergeburt der Lebewesen. ",
+  "an3.59:5.1": "Wenn der Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unerregt –, dann streckt man ihn aus auf die Erkenntnis von Tod und Wiedergeburt der Lebewesen. ",
   "an3.59:5.2": "Mit geläuterter und übermenschlicher Hellsichtigkeit versteht man, wie Lebewesen entsprechend ihrer Taten wiedergeboren werden. ",
   "an3.59:5.3": "Das ist das zweite Wissen, das man erlangt. ",
   "an3.59:5.4": "Unwissenheit ist zerstört und Wissen ist aufgegangen; Dunkelheit ist zerstört und Licht ist aufgegangen, wie es bei jemandem geschieht, der beflissen, eifrig und entschlossen meditiert. ",
