--- a/translation/de/sabbamitta/sutta/an/an6/an6.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.55_translation-de-sabbamitta.json
@@ -60,7 +60,7 @@
   "an6.55:17.5": "Geschmäcke … ",
   "an6.55:17.6": "Berührungen … ",
   "an6.55:17.7": "oder Gedanken, selbst wenn sie in Reichweite des Geistes gelangen, seinen Geist nicht gefangen halten. ",
-  "an6.55:17.8": "Der Geist bleibt unberührt. Er ist stetig, unerschütterlich und beobachtet das Verschwinden. ",
+  "an6.55:17.8": "Der Geist bleibt unberührt. Er ist stetig, unerregt und beobachtet das Verschwinden. ",
   "an6.55:17.9": "Wie wenn da ein Berg wäre, der aus einer einzigen festen Felsmasse bestünde, ohne Risse oder Löcher: ",
   "an6.55:17.10": "Selbst wenn gewaltige Stürme aus Osten, Westen, Norden oder Süden losbrechen würden, ",
   "an6.55:17.12": "könnten sie ihn nicht zum Zittern, Schwanken oder Beben bringen. ",
