--- a/translation/de/sabbamitta/sutta/an/an6/an6.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.55_translation-de-sabbamitta.json
@@ -65,7 +65,7 @@
   "an6.55:17.10": "Selbst wenn gewaltige Stürme aus Osten, Westen, Norden oder Süden losbrechen würden, ",
   "an6.55:17.12": "könnten sie ihn nicht zum Zittern, Schwanken oder Beben bringen. ",
   "an6.55:17.13": "Ebenso werden, wenn der Geist eines Mönchs so befreit ist, einnehmende Bilder, selbst wenn sie in sein Blickfeld gelangen, seinen Geist nicht gefangen halten. … ",
-  "an6.55:17.20": "Der Geist bleibt unberührt. Er ist stetig, unerschütterlich und beobachtet das Verschwinden. ",
+  "an6.55:17.20": "Der Geist bleibt unberührt. Er ist stetig, unerregt und beobachtet das Verschwinden. ",
   "an6.55:18.1": "Wenn du dich der Entsagung weihst ",
   "an6.55:18.2": "und der Abgeschiedenheit des Herzens, ",
   "an6.55:18.3": "wenn du dich dem Wohlwollen ",
