Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn10_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn10_translation-de-sabbamitta.json
@@ -173,7 +173,7 @@
   "dn10:2.27.1": "Wenn ihr Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt –, dann streckt sie ihn aus und richtet ihn auf die Hellhörigkeit. ",
   "dn10:2.27.2": "Mit geläuterter und übermenschlicher Hellhörigkeit kann sie beide Arten von Tönen hören, menschliche und göttliche, ob nah oder fern. ",
   "dn10:2.27.3": "Wie wenn ein Mensch eine Straße entlangwanderte, und er hörte den Klang von Tontrommeln, Schlaginstrumenten, Schneckenhörnern, Pauken und Tomtoms. Er dächte: ‚Das ist der Klang von Trommeln‘, ‚Das ist der Klang von Schlaginstrumenten‘ und ‚Das ist der Klang von Schneckenhörnern, Pauken und Tomtoms‘. ",
-  "dn10:2.27.4": "Ebenso streckt eine Nonne ihren Geist aus und richtet ihn, wenn er so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unerregt –, auf die Hellhörigkeit. ",
+  "dn10:2.27.4": "Ebenso streckt eine Nonne ihren Geist aus und richtet ihn, wenn er so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt –, auf die Hellhörigkeit. ",
   "dn10:2.27.7": "Das ist Teil ihrer Weisheit. ",
   "dn10:2.28.1": "Wenn ihr Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unerregt –, dann streckt sie ihn aus und richtet ihn darauf, den Geist anderer zu erfassen. ",
   "dn10:2.28.2": "Sie erkennt ",
