Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn10_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn10_translation-de-sabbamitta.json
@@ -213,7 +213,7 @@
   "dn10:2.35.2": "Wenn sie befreit ist, weiß sie, sie ist befreit. ",
   "dn10:2.35.3": "Sie versteht: ‚Wiedergeburt ist beendet, die spirituelle Reise ist abgeschlossen, was zu tun war, ist getan, es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘ ",
   "dn10:2.36.1": "Wie ein See in einer Bergschlucht, der durchsichtig, klar und ungetrübt wäre. Ein Mensch mit gutem Sehvermögen, der am Ufer stünde, würde die Schnecken und Muscheln, Steine und Kiesel sehen und auch die Fischschwärme, die herumschwämmen oder stillstünden. Er dächte: ‚Dieser See ist durchsichtig, klar und ungetrübt. Hier sind die Schnecken und Muscheln, Steine und Kiesel und die Fischschwärme, die herumschwimmen oder stillstehen.‘ ",
-  "dn10:2.36.2": "Ebenso streckt eine Nonne ihren Geist aus und richtet ihn, wenn er so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unerregt –, auf die Erkenntnis, dass die Befleckungen aufgelöst sind. ",
+  "dn10:2.36.2": "Ebenso streckt eine Nonne ihren Geist aus und richtet ihn, wenn er so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt –, auf die Erkenntnis, dass die Befleckungen aufgelöst sind. ",
   "dn10:2.36.7": "Das ist Teil ihrer Weisheit. ",
   "dn10:2.37.1": "Das ist dieser Umfang der edlen Weisheit, den der Buddha pries. ",
   "dn10:2.37.2": "Und weiter gibt es nichts mehr zu tun.“ ",
