Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.3_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.3_translation-de-sabbamitta.json
@@ -47,7 +47,7 @@
   "ud3.3:11.4": "Da dachten diese Mönche und Nonnen: ",
   "ud3.3:11.5": "„Welche Art von Meditation übt der Buddha jetzt gerade?“ ",
   "ud3.3:11.6": "Sie dachten: ",
-  "ud3.3:11.7": "„Er übt die unerregte Meditation.“ ",
+  "ud3.3:11.7": "„Er übt die unbewegte Meditation.“ ",
   "ud3.3:11.8": "Sie alle saßen in unerregter Meditation. ",
   "ud3.3:12.1": "Und als dann die Nacht fortgeschritten war, während der ersten Nachtwache, erhob sich der Ehrwürdige Ānanda von seinem Sitz, ordnete seine Robe über einer Schulter, erhob seine zusammengelegten Hände zum Buddha und sagte: ",
   "ud3.3:12.2": "„Herr, die Nacht ist fortgeschritten. Es ist die erste Nachtwache, und die neu angekommenen Mönche und Nonnen haben lange dagesessen. ",
