Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.3_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.3_translation-de-sabbamitta.json
@@ -62,7 +62,7 @@
   "ud3.3:14.7": "Herr, bitte begrüße die neu angekommenen Mönche und Nonnen.“ ",
   "ud3.3:15.1": "Da trat der Buddha aus dieser unerschütterlichen Meditation heraus und wandte sich an Ānanda: ",
   "ud3.3:15.2": "„Wenn du gewusst hättest, Ānanda, hättest du nicht so viel gesagt. ",
-  "ud3.3:15.3": "Sowohl ich als auch diese fünfhundert Mönche und Nonnen haben in unerregter Meditation gesessen.“ ",
+  "ud3.3:15.3": "Sowohl ich als auch diese fünfhundert Mönche und Nonnen haben in unbewegter Meditation gesessen.“ ",
   "ud3.3:16.1": "Und da er diese Sache verstand, drückte der Buddha bei dieser Gelegenheit dieses innige Gefühl aus: ",
   "ud3.3:17.1": "„Ein Mönch, der die Dornen der Sinnlichkeit geschlagen, ",
   "ud3.3:17.2": "wie auch Beschimpfung, Töten und Gefangennehmen, ",
