Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an3/an3.59_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an3/an3.59_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.59_translation-de-sabbamitta.json
@@ -15,7 +15,7 @@
   "an3.59:2.6": "Der Buddha sagte: ",
   "an3.59:3.1": "„Brahmane, es ist, wenn ein Mönch oder eine Nonne, ganz abgeschieden von den Sinnenfreuden … ",
   "an3.59:3.2": "in die vierte Vertiefung eintritt und darin verweilt. ",
-  "an3.59:4.1": "Wenn der Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unerregt –, dann streckt man ihn aus auf die Erinnerung an frühere Leben. ",
+  "an3.59:4.1": "Wenn der Geist so im Samādhi versunken ist – geläutert, hell, makellos, fleckenlos, geschmeidig, formbar, stetig und unbewegt –, dann streckt man ihn aus auf die Erinnerung an frühere Leben. ",
   "an3.59:4.2": "Man erinnert sich an viele Arten früherer Leben mit den Merkmalen und Einzelheiten. ",
   "an3.59:4.3": "Das ist das erste Wissen, das man erlangt. ",
   "an3.59:4.4": "Unwissenheit ist zerstört und Wissen ist aufgegangen; Dunkelheit ist zerstört und Licht ist aufgegangen, wie es bei jemandem geschieht, der beflissen, eifrig und entschlossen meditiert. ",
