--- a/translation/de/sabbamitta/sutta/an/an9/an9.26_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an9/an9.26_translation-de-sabbamitta.json
@@ -31,7 +31,7 @@
   "an9.26:5.9": "Wenn sie weiß: ‚Mein Geist muss nicht mehr zur Wiedergeburt im Bereich der leuchtenden Form zurückkehren‘ … ",
   "an9.26:5.10": "Wenn sie weiß: ‚Mein Geist muss nicht mehr zur Wiedergeburt im formlosen Bereich zurückkehren‘, ist ihr Geist im Herzen gut gefestigt. ",
   "an9.26:5.11": "Wenn der Geist einer Nonne so richtig befreit ist, werden einnehmende Bilder, selbst wenn sie in ihr Blickfeld gelangen, ihren Geist nicht gefangen halten. ",
-  "an9.26:5.12": "Der Geist bleibt unberührt. Er ist stetig, unerregt und beobachtet das Verschwinden. ",
+  "an9.26:5.12": "Der Geist bleibt unberührt. Er ist stetig, unbewegt und beobachtet das Verschwinden. ",
   "an9.26:6.1": "Wie eine sechzehn Fuß hohe Steinsäule, ",
   "an9.26:6.2": "bei der acht Fuß in der Erde steckten und acht Fuß darüber aufragten, ",
   "an9.26:6.3": "und gewaltige Stürme würden aus Osten, Westen, Norden und Süden losbrechen: ",
