Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn12/sn12.51_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.51_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.51_translation-de-sabbamitta.json
@@ -47,7 +47,7 @@
   "sn12.51:8.2": "Das nennt man einen Mönch, der eine vollständige Untersuchung anstellt zum völligen Beenden des Leidens, zum Aufhören von Entscheidungen. ",
   "sn12.51:9.1": "Wenn ein unwissender Mensch eine gute Entscheidung trifft, geht sein Bewusstsein zu einem guten Ort. ",
   "sn12.51:9.2": "Wenn er eine schlechte Entscheidung trifft, geht sein Bewusstsein zu einem schlechten Ort. ",
-  "sn12.51:9.3": "Wenn er eine unerregte Entscheidung trifft, geht sein Bewusstsein zu einem unerregten Ort. ",
+  "sn12.51:9.3": "Wenn er eine unbewegte Entscheidung trifft, geht sein Bewusstsein zu einem unbewegten Ort. ",
   "sn12.51:9.4": "Wenn eine Nonne die Unwissenheit aufgegeben und Erkenntnis hervorgebracht hat, trifft sie keine gute, keine schlechte und keine unerregte Entscheidung. ",
   "sn12.51:9.5": "Wenn sie nicht entscheidet und nicht beabsichtigt, ergreift sie nichts in der Welt. ",
   "sn12.51:9.6": "Wenn sie nichts ergreift, ist ihr nicht bange, und wenn ihr nicht bange ist, erlischt sie aus sich selbst heraus. ",
