--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.51_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.51_translation-de-sabbamitta.json
@@ -65,7 +65,7 @@
   "sn12.51:12.3": "Ebenso weiß sie, wenn sie das Ende des Körpers nahen fühlt: ‚Ich fühle das Ende des Körpers nahen.‘ Wenn sie das Ende des Lebens nahen fühlt, weiß sie: ‚Ich fühle das Ende des Lebens nahen.‘ ",
   "sn12.51:12.4": "Sie versteht: ‚Wenn mein Körper auseinanderbricht und mein Leben zu Ende gegangen ist, wird alles Gefühlte, da ich daran kein Vergnügen mehr finde, hier auf der Stelle kühl werden. Nur körperliche Überreste werden zurückbleiben.‘ ",
   "sn12.51:13.1": "Was denkt ihr, Mönche und Nonnen? ",
-  "sn12.51:13.2": "Würde ein Mönch, der die Befleckungen aufgelöst hat, noch gute, schlechte oder unerregte Entscheidungen treffen?“ ",
+  "sn12.51:13.2": "Würde ein Mönch, der die Befleckungen aufgelöst hat, noch gute, schlechte oder unbewegte Entscheidungen treffen?“ ",
   "sn12.51:13.3": "„Nein, Herr.“ ",
   "sn12.51:14.1": "„Und wenn es überhaupt keine Entscheidungen gäbe, mit dem Aufhören der Entscheidungen, gäbe es da noch Bewusstsein?“ ",
   "sn12.51:14.2": "„Nein, Herr.“ ",
