Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.90_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.90_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.90_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "sn35.90:0.3": "Erregung (1) ",
   "sn35.90:1.1": "„Erregung, Mönche und Nonnen, ist eine Krankheit, ein Eiterherd, ein Pfeil. ",
   "sn35.90:1.2": "Aus diesem Grund lebt der Klargewordene unbewegt, den Pfeil herausgezogen. ",
-  "sn35.90:1.3": "Wenn nun ein Mönch wünscht: ‚Dass ich doch unerregt leben könnte, den Pfeil herausgezogen‘, ",
+  "sn35.90:1.3": "Wenn nun ein Mönch wünscht: ‚Dass ich doch unbewegt leben könnte, den Pfeil herausgezogen‘, ",
   "sn35.90:1.4": "so sollte er sich nicht mit dem Auge gleichsetzen, sich nicht in Bezug auf das Auge gleichsetzen, sich nicht als das Auge gleichsetzen, sich nicht gleichsetzen: ‚Das Auge ist mein‘. ",
   "sn35.90:1.5": "Er sollte sich nicht mit Bildern gleichsetzen … ",
   "sn35.90:1.6": "Er sollte sich nicht mit Augenbewusstsein gleichsetzen … ",
