Translations by sabbamitta to translation/de/site/name/sutta/an-name_translation-de-site.json

--- a/translation/de/site/name/sutta/an-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/an-name_translation-de-site.json
@@ -225,7 +225,7 @@
   "an-name:224.an3.113": "Verlorensein ",
   "an-name:225.an3.114": "Selten ",
   "an-name:226.an3.115": "Unfassbar ",
-  "an-name:227.an3.116": "Unerschütterlich ",
+  "an-name:227.an3.116": "Unbewegt ",
   "an-name:228.an3.117": "Fehltritte und Vervollkommnung ",
   "an-name:229.an3.118": "Gezinkte Würfel ",
   "an-name:230.an3.119": "Handeln ",
