--- a/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn16_translation-de-sabbamitta.json
@@ -1375,7 +1375,7 @@
   "dn16:6.10.14": "Als der Buddha vollkommen erlosch, sagte der Ehrwürdige Anuruddha diese Strophe auf: ",
   "dn16:6.10.15": "„Da war kein Atmen mehr ",
   "dn16:6.10.16": "bei dem Ausgeglichenen von beständigem Herzen. ",
-  "dn16:6.10.17": "Unerschütterlich, dem Frieden geweiht, ",
+  "dn16:6.10.17": "Unbewegt, dem Frieden geweiht, ",
   "dn16:6.10.18": "hat der Abgeklärte seine Zeit vollendet. ",
   "dn16:6.10.19": "Schmerzhafte Gefühle nahm er hin, ",
   "dn16:6.10.20": "ohne zurückzuschrecken. ",
