Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
@@ -168,7 +168,7 @@
   "dn33:1.10.75": "Eine dreifache Einteilung der Materie: ",
   "dn33:1.10.76": "sichtbar und Widerstand bietend, unsichtbar und Widerstand bietend und unsichtbar und keinen Widerstand bietend. ",
   "dn33:1.10.77": "Drei Entscheidungen: ",
-  "dn33:1.10.78": "gute Entscheidungen, schlechte Entscheidungen und unerschütterliche Entscheidungen. ",
+  "dn33:1.10.78": "gute Entscheidungen, schlechte Entscheidungen und unbewegte Entscheidungen. ",
   "dn33:1.10.79": "Drei Menschen: ",
   "dn33:1.10.80": "eine Person in Schulung, eine Meisterin und jemand, der weder in Schulung noch Meister ist. ",
   "dn33:1.10.81": "Drei Älteste: ",
