Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn29_translation-de-sabbamitta.json
@@ -363,7 +363,7 @@
   "dn29:37.4": "‚Das Selbst besitzt nach dem Tod Form und ist gesund; ",
   "dn29:37.6": "oder es besitzt keine Form; ",
   "dn29:37.7": "oder es besitzt sowohl Form als auch nicht; ",
-  "dn29:37.8": "oder es ist weder materiell noch immateriell; ",
+  "dn29:37.8": "oder es besitzt weder Form noch besitzt es keine Form; ",
   "dn29:37.9": "es besitzt Wahrnehmung; ",
   "dn29:37.10": "oder ist ohne Wahrnehmung; ",
   "dn29:37.11": "oder es besitzt weder Wahrnehmung noch ist es ohne Wahrnehmung; ",
