Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -165,5 +165,6 @@
   "dn15:27.0": "4. Razmatranje sopstva",
   "dn15:27.1": "Onaj ko razmatra (ideju) sopstva, Ānanda, na koje ga načine razmatra?",
   "dn15:27.2": "Tako što smatra da osećaj jeste sopstvo, ovim rečima:",
-  "dn15:27.3": "’Osećaj je moje sopstvo.’"
+  "dn15:27.3": "’Osećaj je moje sopstvo.’",
+  "dn15:27.4": "Ili smatra: ’Osećaj nije moje sopstvo; moje sopstvo ne doživljava osećaj.’"
 }
