Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -166,5 +166,6 @@
   "dn15:27.1": "Onaj ko razmatra (ideju) sopstva, Ānanda, na koje ga načine razmatra?",
   "dn15:27.2": "Tako što smatra da osećaj jeste sopstvo, ovim rečima:",
   "dn15:27.3": "’Osećaj je moje sopstvo.’",
-  "dn15:27.4": "Ili smatra: ’Osećaj nije moje sopstvo; moje sopstvo ne doživljava osećaj.’"
+  "dn15:27.4": "Ili smatra: ’Osećaj nije moje sopstvo; moje sopstvo ne doživljava osećaj.’",
+  "dn15:27.5": "Ili smatra: ’Osećaj nije moje sopstvo; ali moje sopstvo nije bez doživljaja osećaja. Moje sopstvo oseća; jer moje sopstvo je podložno osećaju.’"
 }
