Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -169,5 +169,6 @@
   "dn15:27.4": "Ili smatra: ’Osećaj nije moje sopstvo; moje sopstvo ne doživljava osećaj.’",
   "dn15:27.5": "Ili smatra: ’Osećaj nije moje sopstvo; ali moje sopstvo nije bez doživljaja osećaja. Moje sopstvo oseća; jer moje sopstvo je podložno osećaju.’",
   "dn15:28.1": "Onda bi, Ānanda, toga ko kaže:",
-  "dn15:28.2": "’Osećaj je moje sopstvo.’"
+  "dn15:28.2": "’Osećaj je moje sopstvo.’",
+  "dn15:28.3": "ovako trebalo upitati:"
 }
