Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -172,5 +172,6 @@
   "dn15:28.2": "’Osećaj je moje sopstvo.’",
   "dn15:28.3": "ovako trebalo upitati:",
   "dn15:28.4": "’Prijatelju, postoje ove tri vrste osećaja –",
-  "dn15:28.5": "prijatan osećaj, bolan osećaj i ni prijatan ni bolan osećaj."
+  "dn15:28.5": "prijatan osećaj, bolan osećaj i ni prijatan ni bolan osećaj.",
+  "dn15:28.6": "Među te tri vrste osećaja, koji smatraš sopstvom?’"
 }
