Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -173,5 +173,6 @@
   "dn15:28.3": "ovako trebalo upitati:",
   "dn15:28.4": "’Prijatelju, postoje ove tri vrste osećaja –",
   "dn15:28.5": "prijatan osećaj, bolan osećaj i ni prijatan ni bolan osećaj.",
-  "dn15:28.6": "Među te tri vrste osećaja, koji smatraš sopstvom?’"
+  "dn15:28.6": "Među te tri vrste osećaja, koji smatraš sopstvom?’",
+  "dn15:28.7": "Ānanda, kad neko oseća prijatan osećaj, tada on istom tom prilikom ne oseća bolan osećaj ili ni bolan ni prijatan osećaj;"
 }
