Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -175,5 +175,6 @@
   "dn15:28.5": "prijatan osećaj, bolan osećaj i ni prijatan ni bolan osećaj.",
   "dn15:28.6": "Među te tri vrste osećaja, koji smatraš sopstvom?’",
   "dn15:28.7": "Ānanda, kad neko oseća prijatan osećaj, tada on istom tom prilikom ne oseća bolan osećaj ili ni bolan ni prijatan osećaj;",
-  "dn15:28.8": "tom prilikom on oseća jedino prijatan osećaj."
+  "dn15:28.8": "tom prilikom on oseća jedino prijatan osećaj.",
+  "dn15:28.9": "Kada neko oseća bolan osećaj, tada on istom tom prilikom ne oseća prijatan osećaj ili ni bolan ni prijatan osećaj;"
 }
