Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -186,5 +186,6 @@
   "dn15:29.4": "Ako dok doživljava prijatan osećaj neko pomisli. ’To je moje sopstvo’,",
   "dn15:29.5": "tada sa prestankom tog prijatnog osećaja on pomisli: ’Moje sopstvo je nestalo’.",
   "dn15:29.6": "Ako dok doživljava bolan osećaj neko pomisli. ’To je moje sopstvo’,",
-  "dn15:29.7": "tada sa prestankom tog bolnog osećaja on pomisli: ’Moje sopstvo je nestalo’."
+  "dn15:29.7": "tada sa prestankom tog bolnog osećaja on pomisli: ’Moje sopstvo je nestalo’.",
+  "dn15:29.8": "Ako dok doživljava ni bolan ni prijatan osećaj neko pomisli: ’To je moje sopstvo’,"
 }
