Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -189,5 +189,6 @@
   "dn15:29.7": "tada sa prestankom tog bolnog osećaja on pomisli: ’Moje sopstvo je nestalo’.",
   "dn15:29.8": "Ako dok doživljava ni bolan ni prijatan osećaj neko pomisli: ’To je moje sopstvo’,",
   "dn15:29.9": "tada sa prestankom tog ni bolnog ni prijatnog osećaja on pomisli: ’Moje sopstvo je nestalo’.",
-  "dn15:29.10": "Tako onaj ko kaže: ’Osećaj je moje sopstvo’ smatra sopstvo nečim što je, čak ovde i sada, prolazno, mešavina zadovoljstva i bola, podložnim nastanku i nestanku."
+  "dn15:29.10": "Tako onaj ko kaže: ’Osećaj je moje sopstvo’ smatra sopstvo nečim što je, čak ovde i sada, prolazno, mešavina zadovoljstva i bola, podložnim nastanku i nestanku.",
+  "dn15:29.11": "Zbog toga, Ānanda, nije prihvatljivo smatrati da je osećaj sopstvo."
 }
