Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -192,5 +192,6 @@
   "dn15:29.10": "Tako onaj ko kaže: ’Osećaj je moje sopstvo’ smatra sopstvo nečim što je, čak ovde i sada, prolazno, mešavina zadovoljstva i bola, podložnim nastanku i nestanku.",
   "dn15:29.11": "Zbog toga, Ānanda, nije prihvatljivo smatrati da je osećaj sopstvo.",
   "dn15:30.1": "Onda bi, Ānanda, toga ko kaže:",
-  "dn15:30.2": "’Osećaj nije moje sopstvo; moje sopstvo ne doživljava osećaj’ trebalo pitati:"
+  "dn15:30.2": "’Osećaj nije moje sopstvo; moje sopstvo ne doživljava osećaj’ trebalo pitati:",
+  "dn15:30.3": "’Prijatelju, tamo gde ne postoji apsolutno ništa što je moguće osetiti, da li bi se ideja ’ja sam’ mogla pojaviti?’.”"
 }
